feat: add AutoCompleteLov component with autocomplete and LOV functionality
- Implemented `AutoCompleteLov` component for searching and selecting items.
- Added `fetchLov` and `fetchDesc` methods for API interaction.
- Created supporting components: `AutocompleteCard`, `AutocompleteCollapse`, and placeholders.
- Updated styles for new components and added SCSS files.
- Refactored existing components to use new naming conventions (e.g., `nba-` prefix).
- Introduced `AutocompleteService` for handling API requests.
- Added documentation for `AutoCompleteLov` component usage and configuration.
- Updated form error message and input placeholder components to use new naming conventions.

--- a/projects/ng-bootstrap-addons/src/lib/forms/components/inputs/datetime-range-picker/datetime-range-picker.component.html
+++ b/projects/ng-bootstrap-addons/src/lib/forms/components/inputs/datetime-range-picker/datetime-range-picker.component.html
@@ -39,14 +39,14 @@
                 (bsValueChange)="onDatePickerChange($event)"
             ></bs-daterangepicker-inline>
             @if(control.invalid){
-                <app-form-error-message [control]="control"></app-form-error-message>
+                <nba-form-error-message [control]="control"></nba-form-error-message>
             }@else{
                 @if(textValue.invalid){
-                    <app-form-error-message [control]="textValue"></app-form-error-message>
+                    <nba-form-error-message [control]="textValue"></nba-form-error-message>
                 }
             }
         </div>
     }
 } @placeholder{
-    <app-input-placeholder></app-input-placeholder>
+    <nba-input-placeholder></nba-input-placeholder>
 }
