--- a/projects/ng-bootstrap-addons/src/lib/forms/components/inputs/input/input.component.html
+++ b/projects/ng-bootstrap-addons/src/lib/forms/components/inputs/input/input.component.html
@@ -56,9 +56,9 @@
         </div>
         <ng-content select="[group-sufix]"></ng-content>
       </div>
-      <app-form-error-message [control]="control"></app-form-error-message>
+      <nba-form-error-message [control]="control"></nba-form-error-message>
     </div>
   }
 } @placeholder{
-  <app-input-placeholder></app-input-placeholder>
+  <nba-input-placeholder></nba-input-placeholder>
 }
