fix: correct method calls for disabled and multiple properties in drag-and-drop upload component

--- a/projects/ng-bootstrap-addons/src/lib/forms/components/drag-drop-upload/drag-drop-upload.component.html
+++ b/projects/ng-bootstrap-addons/src/lib/forms/components/drag-drop-upload/drag-drop-upload.component.html
@@ -12,17 +12,17 @@
     (dragover)="onDragOver($event)"
     (dragleave)="onDragLeave($event)"
   >
-    <button type="button" (click)="fileInput.click()" class="btn text-decoration-none btn-link text-center mx-auto p-0 mb-3 d-block text-primary" [disabled]="disabled">
+    <button type="button" (click)="fileInput.click()" class="btn text-decoration-none btn-link text-center mx-auto p-0 mb-3 d-block text-primary" [disabled]="disabled()">
       <i class="ti ti-upload h2 mb-0"></i>
     </button>
-    <button type="button" (click)="fileInput.click()" class="btn btn-link p-0 fw-bold lh-1" [disabled]="disabled">Clique para selecionar</button> ou arraste arquivos para cá
-    <input type="file" [attr.multiple]="multiple ? true : null" [disabled]="disabled" [accept]="accept" (change)="onFileSelect($event)" style="display: none;" #fileInput>
+    <button type="button" (click)="fileInput.click()" class="btn btn-link p-0 fw-bold lh-1" [disabled]="disabled()">Clique para selecionar</button> ou arraste arquivos para cá
+    <input type="file" [attr.multiple]="multiple() ? true : null" [disabled]="disabled()" [accept]="accept()" (change)="onFileSelect($event)" style="display: none;" #fileInput>
   </div>
   
   <div class="preview-area row justify-content-center">
-    @for(file of files; track $index){
-      <div [ngClass]="{'my-3':true, 'col-sm-4': multiple, 'col-6 col-sm-6': !multiple}">
-        <div [ngClass]="{'ratio': true, 'ratio-4x3': multiple, 'ratio-1x1': !multiple}">
+    @for(file of files(); track $index){
+      <div [ngClass]="{'my-3':true, 'col-sm-4': multiple(), 'col-6 col-sm-6': !multiple()}">
+        <div [ngClass]="{'ratio': true, 'ratio-4x3': multiple(), 'ratio-1x1': !multiple()}">
           <div class="preview-square">
             @if(file.isImage){
               <img [src]="file.safeUrl" [alt]="file.name" class="preview-image">
