--- a/projects/ng-bootstrap-addons/drag-drop-upload/src/drag-drop-upload.component.scss
+++ b/projects/ng-bootstrap-addons/drag-drop-upload/src/drag-drop-upload.component.scss
@@ -1,6 +1,6 @@
 .upload-area {
     font-size: 13px;
-    border: 1px dashed var(--sm-secondary);
+    border-style: dashed !important;
     border-radius: 0.25rem;
     text-align: center;
     padding: 2rem;
