--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -1,5 +1,5 @@
 <form class="d-flex flex-column gap-3 p-3">
   <div>
-    <nba-drag-drop-upload label="fgdg"></nba-drag-drop-upload>
+    <nba-drag-drop-upload label="Anexe um ou mais arquivos" multiple required></nba-drag-drop-upload>
   </div>
 </form>
