--- a/projects/ng-bootstrap-addons/drag-drop-upload/src/drag-drop-upload.component.html
+++ b/projects/ng-bootstrap-addons/drag-drop-upload/src/drag-drop-upload.component.html
@@ -1,6 +1,6 @@
 <div class="form-group">
   @if(label()){
-    <nba-label [required]="required()"></nba-label>
+    <nba-label class="mb-2 ms-1" [required]="required()">{{label()}}</nba-label>
   }
   <div class="upload-area border border-secondary"
     (drop)="onDrop($event)"
@@ -26,11 +26,13 @@
               <span class="img-name">{{file.name}}</span>
               <span class="img-mask"></span>
             }@else{
-              <i class="ti ti-file h1" aria-hidden="true"></i>
+              <i class="h1" aria-hidden="true">
+                <svg  xmlns="http://www.w3.org/2000/svg"  width="1em"  height="1em"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-file"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M14 3v4a1 1 0 0 0 1 1h4" /><path d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z" /></svg>
+              </i>
               <span class="p-1 file-name">{{file.name}}</span>
             }
             <a href="javascript:;" class="stretched-link" (click)="downloadFile(file)"></a>
-            @if(!disabled){
+            @if(!disabled()){
               <button type="button" class="btn-remove lh-1" (click)="removeFile($index)">&times;</button>
             }
           </div>
