feat: refactor drag-and-drop upload component and add error and empty data samples for enhanced functionality

--- a/projects/ng-bootstrap-addons/components/src/empty-data/empty-data.component.html
+++ b/projects/ng-bootstrap-addons/components/src/empty-data/empty-data.component.html
@@ -1,6 +1,6 @@
 <div class="text-center">
     <div class="mx-auto mb-5">
-        <svg xmlns="http://www.w3.org/2000/svg" width="672" height="442"
+        <svg xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 672 442" fill="none">
             <rect width="672" height="442" fill="white" fill-opacity="0.01" />
             <rect width="662" height="442" transform="translate(5)" fill="white"
@@ -24,42 +24,42 @@
                 d="M443.566 362.047C443.566 366.798 441.595 371.071 438.484 373.935L437.852 374.492C435.385 376.52 432.374 377.616 429.279 377.611H235.072C233.316 377.611 231.637 377.266 230.087 376.631L229.317 376.297C226.776 375.07 224.617 373.071 223.102 370.541C221.587 368.011 220.78 365.058 220.779 362.041V288.97H274.833C280.804 288.97 285.614 294.301 285.614 300.768V300.852C285.614 307.325 290.481 312.545 296.452 312.545H367.894C370.764 312.542 373.515 311.305 375.547 309.105C377.578 306.905 378.723 303.922 378.731 300.807C378.731 294.312 383.547 288.97 389.512 288.97H443.571L443.566 362.047Z"
                 fill="url(#paint5_linear_380_3964)" />
             <defs>
-                <lineargradient id="paint0_linear_380_3964" x1="347.332"
+                <linearGradient id="paint0_linear_380_3964" x1="347.332"
                     y1="205.839" x2="347.332" y2="-48.6519"
                     gradientUnits="userSpaceOnUse">
                     <stop stop-color="#DEDEDE" stop-opacity="0" />
                     <stop offset="1" stop-color="#A9A9A9" stop-opacity="0.3" />
-                </lineargradient>
-                <lineargradient id="paint1_linear_380_3964" x1="318.341"
+                </linearGradient>
+                <linearGradient id="paint1_linear_380_3964" x1="318.341"
                     y1="421.397" x2="318.341" y2="349.223"
                     gradientUnits="userSpaceOnUse">
                     <stop stop-color="white" stop-opacity="0" />
                     <stop offset="1" stop-color="#96A1C5"
                         stop-opacity="0.373" />
-                </lineargradient>
-                <lineargradient id="paint2_linear_380_3964" x1="336" y1="442"
+                </linearGradient>
+                <linearGradient id="paint2_linear_380_3964" x1="336" y1="442"
                     x2="336" y2="323.475" gradientUnits="userSpaceOnUse">
                     <stop stop-color="white" stop-opacity="0" />
                     <stop offset="1" stop-color="#919191" stop-opacity="0.15" />
-                </lineargradient>
-                <lineargradient id="paint3_linear_380_3964" x1="332.173"
+                </linearGradient>
+                <linearGradient id="paint3_linear_380_3964" x1="332.173"
                     y1="221.458" x2="332.173" y2="267.021"
                     gradientUnits="userSpaceOnUse">
                     <stop stop-color="#6281DB" />
                     <stop offset="1" stop-color="#2D4383" />
-                </lineargradient>
-                <lineargradient id="paint4_linear_380_3964" x1="358.188"
+                </linearGradient>
+                <linearGradient id="paint4_linear_380_3964" x1="358.188"
                     y1="353.908" x2="358.188" y2="261.052"
                     gradientUnits="userSpaceOnUse">
                     <stop stop-color="#D9E3FF" />
                     <stop offset="1" stop-color="#B1C5FF" />
-                </lineargradient>
-                <lineargradient id="paint5_linear_380_3964" x1="332.175"
+                </linearGradient>
+                <linearGradient id="paint5_linear_380_3964" x1="332.175"
                     y1="288.97" x2="332.175" y2="377.611"
                     gradientUnits="userSpaceOnUse">
                     <stop stop-color="#3A56A9" />
                     <stop offset="1" stop-color="#B1C5FF" />
-                </lineargradient>
+                </linearGradient>
             </defs>
         </svg>
     </div>
