feat: add AcSearchSample component and integrate it into the main form for enhanced user search functionality

--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -1,5 +1,6 @@
 <form class="d-flex flex-column gap-3 p-3">
+  <app-empty-data-sample></app-empty-data-sample>
   <app-drag-drop-sample></app-drag-drop-sample>
   <app-error-message-sample></app-error-message-sample>
-  <app-empty-data-sample></app-empty-data-sample>
+  <app-ac-search-sample></app-ac-search-sample>
 </form>
