feat: add date range picker and input sample components; update app configuration and templates for enhanced functionality

--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -3,4 +3,6 @@
   <app-drag-drop-sample></app-drag-drop-sample>
   <app-error-message-sample></app-error-message-sample>
   <app-ac-search-sample></app-ac-search-sample>
+  <app-date-range-picker-sample></app-date-range-picker-sample>
+  <app-input-sample></app-input-sample>
 </form>
