--- a/projects/demo/src/app/components/ac-search-sample/ac-search-sample.component.html
+++ b/projects/demo/src/app/components/ac-search-sample/ac-search-sample.component.html
@@ -1,4 +1,4 @@
-<app-sample-container tagName="">
+<app-sample-container tagName="nba-ac-lov">
     <nba-ac-lov
         label="Search User"
         byPath
