feat: update input components to include data-component attributes for improved accessibility and identification

--- a/projects/demo/src/app/components/input-sample/input-sample.component.html
+++ b/projects/demo/src/app/components/input-sample/input-sample.component.html
@@ -6,6 +6,6 @@
     <nba-input
         label="Currency Input"
         currency
-        [(ngModel)]="currencyInput"
+        [(ngModel)]="testCurrency"
     />
 </app-sample-container>
