feat: enhance input sample component with additional input types and styles for improved functionality

--- a/projects/demo/src/app/components/input-sample/input-sample.component.html
+++ b/projects/demo/src/app/components/input-sample/input-sample.component.html
@@ -3,9 +3,22 @@
         label="Default Input"
         [(ngModel)]="defaultInput"
     />
+    <hr>
     <nba-input
         label="Currency Input"
         currency
-        [(ngModel)]="testCurrency"
+        hasCurrency
+        [(ngModel)]="currencyInput"
+    />
+    <hr>
+    <nba-input
+        label="Password Input"
+        password
+    />
+    <hr>
+    <nba-input
+        label="Disabled Input"
+        disabled
+        [(ngModel)]="defaultInput"
     />
 </app-sample-container>
