feat: add new sample components (multiselect, switch, textarea) and enhance app form with additional samples for improved functionality

--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -1,8 +1,10 @@
-<form class="d-flex flex-column gap-3 p-3">
+<form class="d-flex flex-column gap-3 p-3 needs-validation">
   <app-empty-data-sample></app-empty-data-sample>
   <app-drag-drop-sample></app-drag-drop-sample>
   <app-error-message-sample></app-error-message-sample>
   <app-ac-search-sample></app-ac-search-sample>
   <app-date-range-picker-sample></app-date-range-picker-sample>
   <app-input-sample></app-input-sample>
+  <app-switch-sample></app-switch-sample>
+  <app-select-sample></app-select-sample>
 </form>
