--- a/projects/ng-bootstrap-addons/label/src/label.component.scss
+++ b/projects/ng-bootstrap-addons/label/src/label.component.scss
@@ -4,7 +4,8 @@ label.required{
   font-weight: bold;
   align-items: center;
   &::after{
-    content: '*' !important;
-    position: initial !important;
+    content: "*";
+    color: #dc3545;
+    position: initial;
   }
 }
