--- a/projects/ng-bootstrap-addons/label/src/label.component.html
+++ b/projects/ng-bootstrap-addons/label/src/label.component.html
@@ -1,3 +1,3 @@
-<label [class]="class()" [class.required]="required()" [class.text-danger]="required()">
+<label [class]="class()" [class.required]="required()" [for]="for()" [class.text-danger]="required()">
     <span class="text-primary"><ng-content></ng-content></span>
 </label>
