feat: add multiselect sample component and integrate it into the app form for enhanced selection functionality

--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -7,4 +7,5 @@
   <app-input-sample></app-input-sample>
   <app-switch-sample></app-switch-sample>
   <app-select-sample></app-select-sample>
+  <app-multiselect-sample></app-multiselect-sample>
 </form>
