--- a/projects/demo/src/app/components/multiselect-sample/multiselect-sample.component.html
+++ b/projects/demo/src/app/components/multiselect-sample/multiselect-sample.component.html
@@ -1,1 +1,9 @@
-<p>multiselect-sample works!</p>
+<app-sample-container tagName="nba-multiselect">
+    <nba-multiselect
+        label="Default Multiselect"
+        [formControl]="control"
+        [options]="options"
+    ></nba-multiselect>
+    <hr>
+    Value: {{ control.value }}
+</app-sample-container>
