--- a/projects/demo/src/app/components/select-sample/select-sample.component.html
+++ b/projects/demo/src/app/components/select-sample/select-sample.component.html
@@ -3,7 +3,7 @@
         label="Default Select"
         [formControl]="control"
     >
-        <option [value]="null">Selecione</option>
+        <option value="">Selecione</option>
         <option value="option1">Option 1</option>
         <option value="option2">Option 2</option>
         <option value="option3">Option 3</option>
