--- a/projects/ng-bootstrap-addons/selects/src/multiselect/multiselect.component.scss
+++ b/projects/ng-bootstrap-addons/selects/src/multiselect/multiselect.component.scss
@@ -1,5 +1,6 @@
 .dropdown-menu{
-    --sm-dropdown-padding-x: .5rem;
+    padding-left: .5rem;
+    padding-right: .5rem;
     max-height: clamp(300px, 30vw, 800px);
     overflow-y: auto;
     &::-webkit-scrollbar{ display: none }
