feat: update empty data sample component layout and modify heading style for improved presentation

--- a/projects/demo/src/app/components/empty-data-sample/empty-data-sample.component.html
+++ b/projects/demo/src/app/components/empty-data-sample/empty-data-sample.component.html
@@ -1,5 +1,5 @@
 <app-sample-container tagName="nba-empty-data">
-    <div class="w-25 mx-auto">
+    <div class="col-12 col-sm-12 col-md-8 col-xl-6 mx-auto">
         <nba-empty-data></nba-empty-data>
     </div>
 </app-sample-container>
