feat: enhance app component with new sample components (label, textarea) and improve layout for better presentation

--- a/projects/demo/src/app/components/textarea-sample/textarea-sample.component.html
+++ b/projects/demo/src/app/components/textarea-sample/textarea-sample.component.html
@@ -1,1 +1,8 @@
-<p>textarea-sample works!</p>
+<app-sample-container tagName="nba-textarea">
+    <nba-textarea
+        label="Default Textarea"
+        [formControl]="control"
+    ></nba-textarea>
+    <hr>
+    Value: {{ control.value }}
+</app-sample-container>
