--- a/projects/ng-bootstrap-addons/components/src/empty-data/empty-data.component.html
+++ b/projects/ng-bootstrap-addons/components/src/empty-data/empty-data.component.html
@@ -1,5 +1,5 @@
 <div class="text-center">
-    <div class="mx-auto mb-5">
+    <div class="col-sm-8 mx-auto mb-5">
         <svg xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 672 442" fill="none">
             <rect width="672" height="442" fill="white" fill-opacity="0.01" />
