refactor: remove unused host properties and improve component structure across multiple components

--- a/projects/ng-bootstrap-addons/inputs/src/ac-search-lov/ac-search-lov.component.html
+++ b/projects/ng-bootstrap-addons/inputs/src/ac-search-lov/ac-search-lov.component.html
@@ -11,6 +11,7 @@
               (keydown.f9)="fetchLov(descControl.value); $event.stopImmediatePropagation()"
               (keydown.tab)="focus.set(false)"
               (keydown.enter)="fetchLov(descControl.value); $event.stopImmediatePropagation()"
+              autofocus
               clickOutside
               [ngClass]="{
                 'ng-invalid': control.invalid && control.touched,
