--- a/projects/demo/src/app/components/ac-search-sample/ac-search-sample.component.html
+++ b/projects/demo/src/app/components/ac-search-sample/ac-search-sample.component.html
@@ -4,6 +4,7 @@
         byPath
         acUrl="https://pokeapi.co/api/v2/pokemon"
         [map]="mapConfig"
+        autofocus
         [(ngModel)]="selectedPokemon"
         [required]="true">
     </nba-ac-lov>
