--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -54,6 +54,10 @@
           <td>#11</td>
           <td><a href="#label">Label Component</a></td>
         </tr>
+        <tr>
+          <td>#12</td>
+          <td><a href="#table">Table Component</a></td>
+        </tr>
       </tbody>
     </table>
   </div>
@@ -167,4 +171,15 @@
     </p>
     <app-label-sample></app-label-sample>
   </section>
+
+  <section id="table" class="pb-3 pt-3">
+    <h3 class="fw-bold text-uppercase text-primary">Table Component</h3>
+    <p class="text-muted mb-3">
+      A powerful table component with features like sorting, filtering, and pagination. 
+      Supports customizable columns, row selection, and integrates seamlessly with Angular forms. 
+      Ideal for displaying large datasets with ease and efficiency.
+    </p>
+    <app-table-sample></app-table-sample>
+  </section>
+
 </form>
