--- a/projects/ng-bootstrap-addons/inputs/src/numeric-interval-input/numeric-interval-input.component.html
+++ b/projects/ng-bootstrap-addons/inputs/src/numeric-interval-input/numeric-interval-input.component.html
@@ -1,8 +1,8 @@
 @defer (on viewport; prefetch on idle){
 
     @if(control){
-        <div class="form-group d-flex align-items-center gap-1 position-relative">
-            <div class="form-floating can-click">
+        <div class="form-group d-flex flex-column align-items-center gap-1 position-relative flex-wrap">
+            <div class="form-floating">
                 <input
                     class="form-control"
                     type="number"
