--- a/projects/ng-bootstrap-addons/selects/src/select/select.component.html
+++ b/projects/ng-bootstrap-addons/selects/src/select/select.component.html
@@ -1,10 +1,11 @@
 @defer (on viewport; prefetch on idle) {
     @if(control){
-        <div class="form-group">
+        <div class="form-group" [class]="class()">
             <div class="form-floating">
                 <select 
                     [name]="inputId()" 
                     [id]="inputId()"
+                    [class]="inputClass()"
                     [formControl]="control"
                     class="form-select"
                     #input
