--- a/projects/ng-bootstrap-addons/inputs/src/datetime-range-picker/datetime-range-picker.component.html
+++ b/projects/ng-bootstrap-addons/inputs/src/datetime-range-picker/datetime-range-picker.component.html
@@ -1,13 +1,14 @@
 @defer (on viewport; prefetch on idle){
 
     @if(control){
-        <div class="form-group position-relative">
+        <div class="form-group position-relative" [class]="class()">
             <div class="form-floating can-click">
                 <input
                     class="form-control"
                     mask="00/00/0000 00:00:00 - 00/00/0000 00:00:00"
                     [id]="inputId()"
                     [name]="inputId()"
+                    [class]="inputClass()"
                     [placeholder]="label()"
                     [ngClass]="{
                         'ng-touched': control.touched,
