--- a/projects/ng-bootstrap-addons/selects/src/multiselect/multiselect.component.html
+++ b/projects/ng-bootstrap-addons/selects/src/multiselect/multiselect.component.html
@@ -1,12 +1,13 @@
 @defer (on viewport; prefetch on idle){
     @if(control){
-      <div class="form-group">
+      <div class="form-group" [class]="class()">
         <div class="input-group">
           <ng-content select="[group-prefix]"></ng-content>
           <div class="form-floating" dropdown [insideClick]="true">
             <select
                 [name]="inputId()"
                 [id]="inputId()"
+                [class]="inputClass()"
                 [formControl]="control"
                 multiple
                 class="form-select d-none"
