--- a/projects/ng-bootstrap-addons/table/src/table.component.html
+++ b/projects/ng-bootstrap-addons/table/src/table.component.html
@@ -26,7 +26,7 @@
     <div class="d-flex align-items-center gap-3 justify-content-end flex-wrap">
         <small class="text-muted me-2">Página <b>{{ page() }}</b> de <b>{{ smallNumPages() }}</b></small>
         <pagination
-            [(ngModel)]="page"
+            [ngModel]="page()"
             [itemsPerPage]="itemsPerPage()"
             [totalItems]="processedData().length"
             [boundaryLinks]="true"
