--- a/projects/ng-bootstrap-addons/selects/src/multiselect/multiselect.component.html
+++ b/projects/ng-bootstrap-addons/selects/src/multiselect/multiselect.component.html
@@ -29,6 +29,7 @@
                 type="text"
                 class="form-select"
                 [formControl]="descControl"
+                [class]="inputClass()"
                 [placeholder]="label()"
                 readonly
             >
