--- a/projects/ng-bootstrap-addons/table/src/components/column-filter/column-filter.component.html
+++ b/projects/ng-bootstrap-addons/table/src/components/column-filter/column-filter.component.html
@@ -13,6 +13,6 @@
                 <i class="ti ti-x"></i>
             </a>
         </div>
-        <nba-column-filter-form [type]="type()" (onClearFilter)="dropdownToggle.click(); onClearFilter.emit()" (filter)="dropdownToggle.click(); filter.emit($event)" />
+        <nba-column-filter-form [type]="type()" (onClearFilter)="dropdownToggle.click(); onClearFilter.emit()" (filter)="dropdownToggle.click();filter.emit($event)" [dynamicFilter]="dynamicFilter()" />
     </div>
 </div>
